@@ -6,6 +6,7 @@ Version UNRELEASED - 2012-XX-XX
  * Fix $copy not preserving multi-value variables as documented (PICARD-138)
  * Load/save free-text tags for ID3 as TXXX frames (PICARD-148)
  * Fix writing of MusicBrainz Work Id / musicbrainz_workid to tags (PICARD-88)
+ * Display the port Picard is listening on at bottom right status bar (PICARD-190)
 
 Version 0.16 - 2011-10-23
  * Added AcoustID support.
